nsexec (1.16) raring; urgency=low

  * Update container-userns-convert to use new uidmapshift semantics.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Wed, 06 Mar 2013 14:56:56 -0600

nsexec (1.15) raring; urgency=low

  * Apply patch from Dwight to use nftw in uidmapshift (and other
    improvements).

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Mon, 25 Feb 2013 15:00:30 -0600

nsexec (1.14) raring; urgency=low

  * Remove debugging code accidentally left in.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Tue, 15 Jan 2013 10:40:18 -0600

nsexec (1.13) raring; urgency=low

  * uidmapshift: use lchmod in place of chmod, make less verbose, add DEBUG
    compile time option, and fix up wrong variable names.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Fri, 11 Jan 2013 20:56:07 -0600

nsexec (1.0-12) raring; urgency=low

  * build for raring

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Tue, 04 Dec 2012 21:11:17 -0600

nsexec (1.0-11) quantal; urgency=low

  * rename convert_container to container-userns-convert, and have Makefile
    install it to /usr/bin.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Wed, 31 Oct 2012 05:39:11 +0100

nsexec (1.0-10) quantal; urgency=low

  * Restore suid and sgid after chowning in uidmapshift.
  * Add a 'shift-container-uids' script to set up a container for use with
    user namespaces.
  * Drop quilt patches and switch to pure bzr format.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Tue, 30 Oct 2012 16:09:54 +0100

nsexec (1.0-9) quantal; urgency=low

  * Fix help in uidmapshift.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Mon, 29 Oct 2012 15:04:40 +0100

nsexec (1.0-8) quantal; urgency=low

  * add usernstest and uidmapshift programs.

 -- Serge Hallyn <serge.hallyn@ubuntu.com>  Mon, 25 Jun 2012 16:42:50 -0500

nsexec (1.0-7) quantal; urgency=low

  * Add comments to the sample /etc/id_permissions/* files, and insert them
    through debian/rules rather than Makefile.
